@startuml Mafia

left to right direction
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam shadowing false
skinparam svgDimensionStyle false

class Partida {
    - rondaActual : int
    + avanzar() : void
    + verificarVictoria() : ResultadoPartida
    + eliminarJugador(jugador : Jugador) : void
    + ejecutarVotacion(votos : Map<Jugador, Jugador>) : ResultadoVotacion
}

class ContadorDeBandos {
    - cantMafiosos : int
    - cantCiudadanos : int
    + contarMafioso() : void
    + contarCiudadano() : void
    + evaluarCondicion() : ResultadoPartida
}

abstract class ResultadoPartida {
    + {abstract} anunciar() : String
    + {abstract} esTerminal() : boolean
}

class GanaMafia extends ResultadoPartida {
    + anunciar() : String
    + esTerminal() : boolean
}

class GanaCiudadanos extends ResultadoPartida {
    + anunciar() : String
    + esTerminal() : boolean
}

class PartidaEnCurso extends ResultadoPartida {
    + anunciar() : String
    + esTerminal() : boolean
}

abstract class Fase {
    + {abstract} ejecutar(partida : Partida) : void
    + {abstract} siguienteFase(partida : Partida) : Fase
    + iniciaNuevaRonda() : boolean
}

class FaseNocturna extends Fase {
    + ejecutar(partida : Partida) : void
    + siguienteFase(partida : Partida) : Fase
}

class FaseDiurna extends Fase {
    + ejecutar(partida : Partida) : void
    + siguienteFase(partida : Partida) : Fase
}

class FaseFinal extends Fase {
    + ejecutar(partida : Partida) : void
    + siguienteFase(partida : Partida) : Fase
}

interface MecanismoEmpate {
    + resolver(empatados : List<Jugador>, votacion : Votacion) : Optional<Jugador>
}

class MecanismoBallotage implements MecanismoEmpate {
    + resolver(empatados : List<Jugador>, votacion : Votacion) : Optional<Jugador>
}

class MecanismoSinEliminacion implements MecanismoEmpate {
    + resolver(empatados : List<Jugador>, votacion : Votacion) : Optional<Jugador>
}

class Jugador {
    - nombre : String
    - objetivoNocturno : Optional<Jugador>
    + elegirObjetivo(objetivo : Jugador) : void
    + ejecutarTurnoNocturno(contexto : RegistroNocturno) : void
    + ejecutarTurnoDiurno(partida : Partida) : void
    + votarEn(votacion : Votacion) : void
    + votarEnBallotage(votacion : Votacion, candidatos : List<Jugador>) : void
    + agruparseEn(contador : ContadorDeBandos) : void
    + eliminar() : void
    + cambiarEstado(nuevoEstado : EstadoJugador) : void
    + estaVivo() : boolean
    + esAliadoDe(otro : Jugador) : boolean
    + tienePrioridadDeDesempate() : boolean
}

abstract class EstadoJugador {
    + {abstract} ejecutarTurnoNocturno(jugador : Jugador, contexto : RegistroNocturno) : void
    + {abstract} ejecutarTurnoDiurno(jugador : Jugador, partida : Partida) : void
    + {abstract} votarEn(jugador : Jugador, votacion : Votacion) : void
    + {abstract} votarEnBallotage(jugador : Jugador, votacion : Votacion, candidatos : List<Jugador>) : void
    + {abstract} agruparseEn(jugador : Jugador, contador : ContadorDeBandos) : void
    + {abstract} eliminar(jugador : Jugador) : void
    + {abstract} estaVivo() : boolean
}

class EstadoVivo extends EstadoJugador {
    + ejecutarTurnoNocturno(jugador : Jugador, contexto : RegistroNocturno) : void
    + ejecutarTurnoDiurno(jugador : Jugador, partida : Partida) : void
    + votarEn(jugador : Jugador, votacion : Votacion) : void
    + votarEnBallotage(jugador : Jugador, votacion : Votacion, candidatos : List<Jugador>) : void
    + agruparseEn(jugador : Jugador, contador : ContadorDeBandos) : void
    + eliminar(jugador : Jugador) : void
    + estaVivo() : boolean
}

class EstadoMuerto extends EstadoJugador {
    + ejecutarTurnoNocturno(jugador : Jugador, contexto : RegistroNocturno) : void
    + ejecutarTurnoDiurno(jugador : Jugador, partida : Partida) : void
    + votarEn(jugador : Jugador, votacion : Votacion) : void
    + votarEnBallotage(jugador : Jugador, votacion : Votacion, candidatos : List<Jugador>) : void
    + agruparseEn(jugador : Jugador, contador : ContadorDeBandos) : void
    + eliminar(jugador : Jugador) : void
    + estaVivo() : boolean
}

abstract class Rol {
    + {abstract} agruparseEn(contador : ContadorDeBandos) : void
    + {abstract} esSospechoso() : boolean
    + {abstract} esAliadoDe() : boolean
    + prepararAccion(actor : Jugador, objetivo : Optional<Jugador>) : Optional<AccionNocturna>
}

abstract class RolCiudadano extends Rol {
    + esCiudadano() : boolean
}

class Ciudadano extends RolCiudadano {
    + agruparseEn(contador : ContadorDeBandos) : void
    + esSospechoso() : boolean
}

abstract class Investigador extends RolCiudadano {
    - ultimaInvestigacion : Optional<ResultadoInvestigacion>
    + prepararAccion(actor : Jugador, objetivo : Optional<Jugador>) : Optional<AccionNocturna>
    + {abstract} revelarInvestigacion() : void
}

class Detective extends Investigador {
    + agruparseEn(contador : ContadorDeBandos) : void
    + esSospechoso() : boolean
    + revelarInvestigacion() : void
}

class Sheriff extends Investigador {
    + agruparseEn(contador : ContadorDeBandos) : void
    + esSospechoso() : boolean
    + revelarInvestigacion() : void
}

class Medico extends RolCiudadano {
    + agruparseEn(contador : ContadorDeBandos) : void
    + esSospechoso() : boolean
    + prepararAccion(actor : Jugador, objetivo : Optional<Jugador>) : Optional<AccionNocturna>
}

class Mafioso extends Rol {
    + agruparseEn(contador : ContadorDeBandos) : void
    + esSospechoso() : boolean
    + prepararAccion(actor : Jugador, objetivo : Optional<Jugador>) : Optional<AccionNocturna>
}

class Padrino extends Mafioso {
    + esSospechoso() : boolean
}

class RegistroNocturno {
    + agregarAccion(accion : AccionNocturna) : void
    + ejecutarAcciones() : void
    + resolverAtaqueMafia() : void
    + registrarVotoMafia(votante : Jugador, votado : Jugador) : void
    + registrarProteccion(protegido : Jugador) : void
    + registrarInvestigacion(investigador : Investigador, sospechoso : Jugador, esSospechoso : boolean) : void
    + generarResultado() : ResultadoNocturno
}

interface AccionNocturna {
    + ejecutar(registro : RegistroNocturno) : void
}

class AtaqueNocturno implements AccionNocturna {
    - victima : Jugador
    + ejecutar(registro : RegistroNocturno) : void
    + resolverCon(tieneProteccion : boolean) : boolean
    + getVictima() : Jugador
}

class ProteccionNocturna implements AccionNocturna {
    - protegido : Jugador
    + ejecutar(registro : RegistroNocturno) : void
}

class ResultadoInvestigacion implements AccionNocturna {
    - investigador : Investigador
    - sospechoso : Jugador
    + ejecutar(registro : RegistroNocturno) : void
    + laInvestigacionDioSospechosa() : boolean
}

class VotoMafia implements AccionNocturna {
    - votante : Jugador
    - votado : Jugador
    + ejecutar(registro : RegistroNocturno) : void
}

class ResultadoNocturno {
    - victima : Optional<Jugador>
    + obtenerVictima() : Optional<Jugador>
}

class Votacion {
    - votos : Map<Jugador, Jugador>
    - empatados : List<Jugador>
    + registrarVoto(votante : Jugador, votado : Jugador) : void
    + calcularResultado() : ResultadoVotacion
    # resolverEmpate(empatados : List<Jugador>) : Optional<Jugador>
    + obtenerEmpatados() : List<Jugador>
}

class VotacionMafia extends Votacion {
    + registrarVoto(votante : Jugador, votado : Jugador) : void
    # resolverEmpate(empatados : List<Jugador>) : Optional<Jugador>
}

class ResultadoVotacion {
    - expulsado : Optional<Jugador>
    + obtenerExpulsado() : Optional<Jugador>
}

' Relaciones de Asociación y Dependencia
Partida "1" *--> "*" Jugador
Partida "1" o--> "1" Fase
Partida ..> ResultadoPartida
Partida ..> ContadorDeBandos

FaseNocturna ..> RegistroNocturno
FaseDiurna o--> MecanismoEmpate
FaseDiurna ..> Votacion

ContadorDeBandos ..> ResultadoPartida

Jugador "1" *--> "1" Rol
Jugador "1" *--> "1" EstadoJugador

RegistroNocturno "1" *--> "*" AccionNocturna
RegistroNocturno ..> ResultadoNocturno
Votacion ..> ResultadoVotacion

@enduml